--- a/Presentations/Building_and_Distributing_R_Packages_Using_GitHub.Rmd
+++ b/Presentations/Building_and_Distributing_R_Packages_Using_GitHub.Rmd
@@ -6,47 +6,72 @@ author: "Damian Betebenner"
 date: "April 21st, 2022 (updated: `r toOrdinal::toOrdinalDate(Sys.Date())`)"
 output:
   xaringan::moon_reader:
+    seal: false
+    css: [default, 'assets/css/cfa_theme_a.css', 'assets/css/cfa-fonts.css']
     lib_dir: libs
     nature:
       ratio: "16:9"
       highlightStyle: github
       highlightLines: true
       countIncrementalSlides: false
-    seal: false
 ---
-class: center, title-slide, middle
+class: center, middle, title-slide
+background-image: url(assets/img/CFA_Logo_alpha_07.svg)
+background-size: contain
 
-```{r setup, include=FALSE}
-options(htmltools.dir.version = FALSE)
+```{r metadata, echo=FALSE}
+# creating HTML metadata to accompany the slides
+library(metathis)
+meta() %>%
+  meta_general(
+    description = "Building and Distributing R Packages using GitHub",
+    generator = "xaringan and remark.js"
+  ) %>% 
+  meta_name("github-repo" = "centerforassessment/NCME_2022_Demonstration") %>% 
+  meta_social(
+    title = "NCME 2022 | Damian Betebenner",
+    url = "https://centerforassessment.github.io/NCME_2022_Demonstration/articles/presentations/Demonstration_Session_Presentations.html#using-github-to-build-distribute-r-packages",
+    image = "coverImageSlide.png",
+    image_alt = "Title slide for the talk presentation",
+    og_type = "website",
+    og_author = "Damian Betebenner",
+    twitter_card_type = "summary_large_image",
+    twitter_creator = "@dbetebenner"
+  )
 ```
 
-```{r share-again, echo=FALSE}
-xaringanExtra::use_share_again()
-```
 
-```{r style-share-again, echo=FALSE}
-xaringanExtra::style_share_again(
-  share_buttons = c("twitter"),
-  background = "#009C49",
-  foreground = "#FFFFFF"
-)
-```
-
-```{r xaringan-logo, echo=FALSE}
-xaringanExtra::use_logo(
-  image_url = "https://centerforassessment.github.io/assets/CenterForAssessment_LOGO.svg",
-  position = xaringanExtra::css_position(top = "0.5em", right = "0.5em"),
-  width = "150px",
-  link_url = "https://www.nciea.org"
-)
-```
-
-```{r xaringan-tile-view, echo=FALSE}
-xaringanExtra::use_tile_view()
-```
-
-```{r xaringanExtra-clipboard, echo=FALSE}
-xaringanExtra::use_clipboard()
+.title[
+# `r rmarkdown::metadata$title`
+]
+.subtitle[
+## `r rmarkdown::metadata$subtitle`
+]
+.author[
+### `r rmarkdown::metadata$author`
+]
+.institute[
+### `r rmarkdown::metadata$institute`
+]
+.date[
+### `r toOrdinal::toOrdinalDate(Sys.Date())`<br />NCME 2022 Annual Meeting
+]
+```{r setup, include=FALSE, echo=FALSE}
+    options(htmltools.dir.version = FALSE)
+    xaringanExtra::use_share_again()
+    xaringanExtra::style_share_again(
+      share_buttons = c("twitter"),
+      background = "#009C49",
+      foreground = "#FFFFFF"
+    )
+    xaringanExtra::use_logo(
+      image_url = "https://centerforassessment.github.io/assets/CenterForAssessment_LOGO.svg",
+      position = xaringanExtra::css_position(top = "0.5em", right = "0.5em"),
+      width = "150px",
+      link_url = "https://www.nciea.org"
+    )
+    xaringanExtra::use_tile_view()
+    xaringanExtra::use_clipboard()
 ```
 
 <style>
@@ -54,19 +79,6 @@ xaringanExtra::use_clipboard()
   display: none;
 }
 </style>
-
----
-class: center, title-slide, middle
-
-# Building and Distributing R Packages using GitHub
-
-## <br/> Using GitHub for Open-Source Analytics, Reporting, and Dissemination of Research
-
-### Damian Betebenner
-
-### Center for Assessment
-
-### April 21st, 2022 (updated: `r toOrdinal::toOrdinalDate(Sys.Date())`)
 
 <a href="https://github.com/CenterForAssessment/NCME_2022_Demonstration/blob/main/Presentations/Building_and_Distributing_R_Packages_Using_GitHub.Rmd" class="github-corner" aria-label="View source on Github"> <svg width="80" height="80" viewBox="0 0 250 250" style="position: absolute; top: 0px; right: 0px; border: 0px;" aria-hidden="true"> <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z" fill="#1C9B48"></path> <path class="octo-arm" d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="#000000" style="transform-origin: 130px 106px;"></path> <path class="octo-body" d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="#000000"></path> </svg> </a>
 
