--- a/Presentations/Building_and_Distributing_R_Packages_Using_GitHub.Rmd
+++ b/Presentations/Building_and_Distributing_R_Packages_Using_GitHub.Rmd
@@ -33,7 +33,7 @@ meta() %>%
   meta_social(
     title = "Building & Distributing R Packages Using GitHub | NCME 2022 | Damian Betebenner",
     url = "https://centerforassessment.github.io/NCME_2022_Demonstration/articles/presentations/Demonstration_Session_Presentations.html#using-github-to-build-distribute-r-packages",
-    image = "assets/img/coverImageSlide_Building_Distributing.png",
+    image = "https://centerforassessment.github.io/NCME_2022_Demonstration/presentations/assets/img/coverImageSlide_Building_Distributing.png",
     image_alt = "Title slide for Building & Distributin R Packages Using GitHub presentation",
     og_type = "website",
     og_locale = "en_US",
