--- a/Presentations/Report_Generation_and_Dissemination_Using_GitHub_and_RMarkdown.Rmd
+++ b/Presentations/Report_Generation_and_Dissemination_Using_GitHub_and_RMarkdown.Rmd
@@ -1,17 +1,23 @@
 ---
-title: "Flexible Report Generation and Dissemination"
+title: "Flexible Report Generation and Dissemination with GitHub"
 subtitle: "Using GitHub for Open-Source Analytics, Reporting, and Dissemination of Research"
 institute: "Center for Assessment"
 author: "Adam VanIwaarden"
-# date: "`r toOrdinal::toOrdinalDate(Sys.Date())`<br>NCME 2022 Annual Meeting"
 date: >-
-  April 23rd, 2022
-
+  April 23rd, 2022<br>NCME 2022 Annual Meeting<br>Demonstration Session
+  
   ```{r, github-corner, echo=FALSE, results='asis'}
-    cat(readLines(cfaDocs:::pkg_resource('rmd/cfa-octocat-corner.md'), warn=FALSE), sep = '\n')
+    cat(cfaDocs:::makeOctoCat(
+      link='https://github.com/CenterForAssessment/NCME_2022_Demonstration/blob/main/Presentations/Report_Generation_and_Dissemination_Using_GitHub_and_RMarkdown.Rmd'))
   ```
 output:
   cfaDocs::cfaXaringan:
+    cfa_theme: 'cfa-b'
+    include: !expr list(
+      footer = 'default',
+      footer_text = 'Flexible Report Generation',
+      xaringanExtra = 'default',
+      xExtra_use = c('share_again', 'slide_tone', 'tile_view', 'clipboard'))
     extras: !expr list(fig = 'cfa_assets/fig')
     nature:
       ratio: 16:9
@@ -534,20 +540,20 @@ errors.
 
 ##  Format comparisons
 
-<img src="libs/cfa_assets/fig/wp_cover.png" width="30%">
-<img src="libs/cfa_assets/fig/pgdrpt_cover.png" width="30%">
-<img src="libs/cfa_assets/fig/nciea_cover.png" width="33%">
+<img src="libs/cfa_assets/fig/wp_cover.png" width="31.5%">
+<img src="libs/cfa_assets/fig/pgdrpt_cover.png" width="31.5%">
+<img src="libs/cfa_assets/fig/nciea_cover.png" width="34.5%">
 
 ---
 
 ##  Format comparisons
 
-<img src="libs/cfa_assets/fig/pgdrpt_quad1.png" width="33%">
-<img src="libs/cfa_assets/fig/nciea_quad1.png" width="36%">
+<img src="libs/cfa_assets/fig/pgdrpt_quad1.png" width="38%">
+<img src="libs/cfa_assets/fig/nciea_quad1.png" width="41.5%" align = "right">
 
 ---
 
 ##  Format comparisons
 
-<img src="libs/cfa_assets/fig/pgdrpt_quad2.png" width="33%">
-<img src="libs/cfa_assets/fig/nciea_quad2.png" width="36%">
+<img src="libs/cfa_assets/fig/pgdrpt_quad2.png" width="38%">
+<img src="libs/cfa_assets/fig/nciea_quad2.png" width="41.5%" align = "right">
