--- a/Presentations/Building_and_Distributing_R_Packages_Using_GitHub.Rmd
+++ b/Presentations/Building_and_Distributing_R_Packages_Using_GitHub.Rmd
@@ -1,23 +1,30 @@
 ---
 title: "Building and Distributing R Packages using GitHub"
 subtitle: "Using GitHub for Open-Source Analytics, Reporting, and Dissemination of Research"
-institute: "Center for Assessment"
 author: "Damian Betebenner"
-date: "April 21st, 2022 (updated: `r toOrdinal::toOrdinalDate(Sys.Date())`)"
+institute: >-
+  Center for Assessment
+
+  <a href="https://github.com/CenterForAssessment/NCME_2022_Demonstration/blob/main/Presentations/Building_and_Distributing_R_Packages_Using_GitHub.Rmd" class="github-corner" aria-label="View source on Github"> <svg width="80" height="80" viewBox="0 0 250 250" style="position: absolute; top: 0px; right: 0px; border: 0px;" aria-hidden="true"> <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z" fill="#000000"></path> <path class="octo-arm" d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="#6e5494" style="transform-origin: 130px 106px;"></path> <path class="octo-body" d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="#6e5494"></path> </svg> </a>
+
+date: "April 21st, 2022 (updated: `r toOrdinal::toOrdinalDate(Sys.Date())`)<br />NCME 2022 Annual Meeting"
 output:
-  xaringan::moon_reader:
-    seal: false
-    css: [default, 'assets/css/cfa_theme_a.css', 'assets/css/cfa-fonts.css']
-    lib_dir: libs
-    nature:
-      ratio: "16:9"
-      highlightStyle: github
-      highlightLines: true
-      countIncrementalSlides: false
+  cfaDocs::cfaXaringan:
+    cfa_theme: 'cfa-b'
+    include: !expr list(
+      xaringanExtra = 'default',
+      xExtra_use = c('share_again', 'tile_view', 'clipboard'))
 ---
-class: center, middle, title-slide
-background-image: url(assets/img/CFA_Logo_alpha_07.svg)
-background-size: contain
+
+layout: true
+
+<!--  Add Footer Manually - might only be able to have ONE 'layout: true' slide  -->
+<!--  this adds the footer to all slides, depends on footer class in css  -->
+
+<div class="footer" style="left: 5%;"><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" style = "max-width: 40%; opacity: 0.5;"></img></div>
+<div class="footer" style="left: 7.5%;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" style = "max-width: 40%; opacity: 0.5;"></img></div>
+<div class="footer" style="left: 40%;"><a class="footer" href="https://github.com/CenterForAssessment/packageSkeletonForR">R Packages with GitHub</a></div>
+
 
 ```{r metadata, echo=FALSE}
 # creating HTML metadata to accompany the slides
@@ -44,89 +51,41 @@ meta() %>%
   )
 ```
 
-
-.title[
-# `r rmarkdown::metadata$title`
-]
-.subtitle[
-## `r rmarkdown::metadata$subtitle`
-]
-.author[
-### `r rmarkdown::metadata$author`
-]
-.institute[
-### `r rmarkdown::metadata$institute`
-]
-.date[
-### `r toOrdinal::toOrdinalDate(Sys.Date())`<br />NCME 2022 Annual Meeting
-]
-```{r setup1, include=FALSE, echo=FALSE}
-    xaringanExtra::use_share_again()
-```
-```{r setup2, include=FALSE, echo=FALSE}
-    require(xaringanExtra)
-    options(htmltools.dir.version = FALSE)
-    style_share_again(
-      share_buttons = c("twitter"),
-      background = "#009C49",
-      foreground = "#FFFFFF"
-    )
-    use_logo(
-      image_url = "https://centerforassessment.github.io/assets/CenterForAssessment_LOGO.svg",
-      position = xaringanExtra::css_position(top = "0.5em", right = "0.5em"),
-      width = "150px",
-      link_url = "https://www.nciea.org"
-    )
-    use_tile_view()
-    use_clipboard()
-```
-
-<style>
-.title-slide .remark-slide-number {
-  display: none;
-}
-</style>
-
-<a href="https://github.com/CenterForAssessment/NCME_2022_Demonstration/blob/main/Presentations/Building_and_Distributing_R_Packages_Using_GitHub.Rmd" class="github-corner" aria-label="View source on Github"> <svg width="80" height="80" viewBox="0 0 250 250" style="position: absolute; top: 0px; right: 0px; border: 0px;" aria-hidden="true"> <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z" fill="#1C9B48"></path> <path class="octo-arm" d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="#000000" style="transform-origin: 130px 106px;"></path> <path class="octo-body" d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="#000000"></path> </svg> </a>
-
 ---
 class: inverse, center, middle
 
 # R
 ---
+class: highlight-last-item
 
-# R
-
---
-
-```{r echo=FALSE}
-magick::image_read_svg(path="Figs/Rlogo.svg", width=100, height=100)
+``` {css, echo=FALSE}
+h1 > img {
+  width: 10%
+}
 ```
 
---
+# ![](https://www.r-project.org/logo/Rlogo.svg)
 
+--
 - Open soure software environment originally developed for statistical analysis (but now useful for lots more)
 
 --
-
 - Has become one of the most prominent environmetns for performing and developing data analytics/statistics
 
 --
-
 - Applicable to many other things (this presentation and the website on which it is based was created using R)
 
 --
-
 - One of its greatest strengths is its extensibility
 
 --
-
 - Allows users to create and distribute customized R software
 
 --
-
 - Currently 19,002 package on CRAN and many more available only on GitHub (which is a big part of what I'm going to talk about)
 
+--
+- <hr />
 
 ---
 class: inverse, center, middle
@@ -134,6 +93,7 @@ class: inverse, center, middle
 # GitHub
 
 ---
+class: highlight-last-item
 
 # GitHub
 
@@ -148,6 +108,10 @@ class: inverse, center, middle
 --
 
 - Often used for software development but is incredibly useful for data analytics
+
+--
+
+- <hr/>
 
 ---
 
@@ -164,6 +128,7 @@ class: inverse, center, middle
 # Superpower
 
 ---
+class: highlight-last-item
 
 # GitHub + R
 
@@ -185,7 +150,11 @@ class: inverse, center, middle
 
 - If data analysis and reporting results is your career, I can't recommend the combination of GitHub + R enough.
 
+--
+- <hr/>
+
 ---
+class: highlight-last-item
 
 # R Packages
 
@@ -199,20 +168,33 @@ class: inverse, center, middle
 
 --
 
+-   
+
+---
+class: highlight-last-item
+
+# R Packages
+
+--
 - Packages can be shared and installed by others in a multide of ways:
 
 --
-    - Email a zipped bundle to another person who can install it. (very oldschool and clunky)
---
-    - Submit it to CRAN and use `install.packages()` to install the package. (Good for "official versions/archiving")
---
-    - Build it on GitHub and use `remotes::install_github()` or `devtools::install_github` to install off of GitHub. (Get version control in addition to package hosting)
+  - Email a zipped bundle to another person who can install it. (very oldschool and clunky)
 
 --
+  - Submit it to CRAN and use `install.packages()` to install the package. (Good for "official versions/archiving")
 
+--
+  - Build it on GitHub and use `remotes::install_github()` or `devtools::install_github` to install off of GitHub. (Get version control in addition to package hosting)
+
+--
 - The definitive guide on R package construction is [Writing R Extensions](https://cran.r-project.org/doc/manuals/r-release/R-exts.html) available on CRAN.
 
+--
+- <hr/>
+
 ---
+class: highlight-last-item
 
 # packageSkeletonForR
 
@@ -232,78 +214,80 @@ class: inverse, center, middle
 
 - The skeleton also contains several additional pieces (a website) describing the contents of the repo and how it works
 
+--
+- <hr/>
+
 ---
+
 # packageSkeletonForR
 
-```{r echo=FALSE}
+```{r echo=FALSE, out.width="80%", fig.align="center"}
 magick::image_read_pdf(path="Figs/packageSkeletonForR.pdf")
 ```
 
 ---
+class: highlight-last-item
+
 # R Package Contents
 
 --
-
 - A folder `R` that contains your R scripts/functions
 
 --
-
 - A folder `inst` that contains `CITATION` and `NEWS` files
 
 --
-
 - A folder `man` that contains the manual pages associated with your exported functions
 
 --
-
 - A folder `tests` that contains tests associated with your functions (optional but recommended)
 
 --
-
 - A folder `vignettes` that contains RMarkdown vignettes associated with your package (optional but recommended)
 
 --
-
 - A file `DESCRIPTION` that contains text describing the package
 
 --
-
 - A file `NAMESPACE` that specific what gets imported and exported to/from the package.
 
+--
+- <hr/>
+
 ---
+class: highlight-last-item
+
 # R Package Contents
 
 --
-
 - A Folder `.github` that contains a file allowing one to use GitHub to compile the R package and test for errors.
 
 --
-
 - A folder `docs` that contains the source code associated with the GitHub hosted website for the package (created by R package `packagePages` using the function `projectPages`)
 
 --
-
 - A file `.Rbuildignore` that specifies which files/folders to ignore when the package gets built.
 
 --
-
 - A file `.appveyor` that specific another continuous integration application (appveyor). Probably redundant with GitHub actions
 
 --
-
 - Files `README.md`, `NEWS.md` and `LICENSE.md` that are markdown based and provide information about the GitHub repo.
 
 --
-
 - A file `_pkgdown` which provides the structure for the dropdown menu of the website associated with the repo.
 
+--
+- <hr/>
+
 ---
+class: highlight-last-item
 
 # Package Installation
 
 --
 
-# To install the package
+### To install the package
 
 --
 
@@ -315,4 +299,7 @@ magick::image_read_pdf(path="Figs/packageSkeletonForR.pdf")
 
 --
 
-- Multiple people can make commits with different permissions as to who can merge in `pull requests`
+- Multiple people can make commits with different permissions as <br/> to who can merge in `pull requests`
+
+--
+- <hr/>
