--- a/Presentations/Consolidating_Analysis_and_Dissemination_of_Research_Using_GitHub.Rmd
+++ b/Presentations/Consolidating_Analysis_and_Dissemination_of_Research_Using_GitHub.Rmd
@@ -1,54 +1,26 @@
 ---
 title: "Consolidating Analysis and Dissemination of Research using GitHub"
 subtitle: "Using GitHub for Open-Source Analytics, Reporting, and Dissemination of Research"
-institute: "Center for Assessment"
 author: "Nathan Dadey"
-date: "April 23rd, 2022 (updated: `r toOrdinal::toOrdinalDate(Sys.Date())`)"
+institute: "Center for Assessment"
+date: >- 
+  April 23rd, 2022<br>NCME 2022 Annual Meeting<br>Demonstration Session
+  
+  ```{r, github-corner, echo=FALSE, results='asis'}
+    cat(cfaDocs:::makeOctoCat(
+      link='https://github.com/CenterForAssessment/NCME_2022_Demonstration/blob/main/Consolidating_Analysis_and_Dissemination_of_Research_Using_GitHub.Rmd'))
+  ```
 output:
-  xaringan::moon_reader:
-    lib_dir: libs
-    nature:
-      highlightStyle: github
-      highlightLines: true
-      countIncrementalSlides: false
-      titleSlideClass: ["center", "middle", "my-title"]
-
+  cfaDocs::cfaXaringan:
+    cfa_theme: null
+    theme_copy: false
+    css: ['**/cfa-a.css', '**/cfa-b-fonts.css']
+    include: !expr list(
+      footer = 'default',
+      xaringanExtra = 'default',
+      xExtra_use = c('share_again', 'tile_view', 'clipboard'))
 ---
 class: inverse, center, middle
-
-```{r setup, include=FALSE}
-options(htmltools.dir.version = FALSE)
-```
-
-```{r share-again, echo=FALSE}
-xaringanExtra::use_share_again()
-```
-
-```{r style-share-again, echo=FALSE}
-xaringanExtra::style_share_again(
-  share_buttons = c("twitter"),
-  background = "#009C49",
-  foreground = "#FFFFFF"
-)
-```
-
-```{r xaringan-logo, echo=FALSE}
-xaringanExtra::use_logo(
-  image_url = "https://centerforassessment.github.io/assets/favicon.png",
-  width = "55px",
-  height = "64px",
-  position = xaringanExtra::css_position(top = "0.5em", right = "0.5em"),
-  link_url = "https://www.nciea.org"
-)
-```
-
-```{r xaringan-tile-view, echo=FALSE}
-xaringanExtra::use_tile_view()
-```
-
-```{r xaringanExtra-clipboard, echo=FALSE}
-xaringanExtra::use_clipboard()
-```
 
 # Consolidating Analysis and Dissemination of Research using GitHub
 
@@ -102,13 +74,13 @@ Shiny (e.g., see this [simple example](https://www.lexjansen.com/pharmasug-cn/20
 + One way to implement this approach is by binding up the multiple write ups from multiple analyses (captured in individual . rmds ) into a larger book via the [bookdown](https://bookdown.org/yihui/rmarkdown/books.html) package.
 
 ---
-<br><br><br>
+
 ```{r pages_to_book, fig.align='center', echo=FALSE, eval = TRUE}
 magick::image_read("Figs/pages_to_book.png")
 ```
 
 ---
-<br><br><br>
+<br>
 ```{r example_workbook, fig.align='center', echo=FALSE, eval = TRUE}
 magick::image_read("Figs/example_workbook.png")
 ```
